--- a/localisation/replace/mod_unittypes_l_english.yml
+++ b/localisation/replace/mod_unittypes_l_english.yml
@@ -45,7 +45,7 @@
  saxon_infantry:0 "§GSaxon Infantry§!"
  russian_petrine:0 "§GPetrine Infantry§!"
  russian_green_coat:0 "§GGreen Coat Infantry§!"
- russian_mass:0 "§bMass Infantry§!"
+ russian_mass:0 "§GMass Infantry§!"
  #anatolian
  ottoman_yaya:0 "§GYaya Infantry§!"
  ottoman_azab:0 "§GAzab Infantry§!"
